Added week 2 and week 3

--- a/index.html
+++ b/index.html
@@ -5,13 +5,24 @@
 </head>
 
 <body>
-
+  <h1>week 1</h1>
   <script type="text/javascript" src="week1_hw.js"></script>
   <script>
-    document.write("My name is " + firstName + " " + lastName + ".   " + "I have been at SCC for " + yearsOfStudy + " and plan to " + goal + " after completing my courses.")
+    document.write("My name is " + firstName + " " + lastName + ".   " + "I have been       at SCC for " +             yearsOfStudy + " and plan to " + goal + " after completing my           courses.")
+    document.write("<br>");
+    document.write("<br>");
   </script>
 
-  <script type="text/javascript" src="week2_hw.js"></script>
+  <h1>week 2</h1>
+  <script type="text/javascript" src="week2_hw.js">
+    document.write("<br>");
+    document.write("<br>");
+  </script>
+
+
+  <h1>week 3</h1>
+  <script type="text/javascript" src="week3_hw.js"></script>
+
 
 </body>
 
